--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <a href="#home" class="nav-link active">/home</a>
                     <a href="#about" class="nav-link">/about</a>
                     <a href="#projects" class="nav-link">/projects</a>
+                    <a href="#graphics" class="nav-link">/graphics</a>
                 </nav>
             </div>
             <div class="header-right">
@@ -140,6 +141,19 @@
                         </div>
                     </div>
                 </div>
+            </section>
+
+            <!-- Graphics Section -->
+            <section id="graphics" class="section">
+                <h2>Graphics</h2>
+                <div class="graphics-galleries">
+                    <!-- Galleries will be dynamically populated here -->
+                </div>
+            </section>
+
+            <section id="gallery-view" class="section">
+                <h2 id="gallery-title"></h2>
+                <div class="gallery-images"></div>
             </section>
 
         </main>
